<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.fran.chuckfacts.controllers.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_vertical">

        <TextView
            android:id="@+id/txtViewMainTitol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_gravity="center_horizontal"
            android:textSize="45sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="20dp"></LinearLayout>

        <ImageView
            android:id="@+id/imageViewFacts"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/cn_bk"
            android:contentDescription="@string/btnFacts" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnFacts"
            android:id="@+id/btnFacts"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginBottom="40dp"
            android:onClick="goFacts"
            android:clickable="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnHistory"
            android:id="@+id/btnHistory"
            android:layout_gravity="center_horizontal|center_vertical"
            android:onClick="goHistory"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:id="@+id/imageViewEvo"
            android:contentDescription="@string/chuck_evo"
            android:src="@drawable/chuckevolution"
            android:layout_marginTop="10dp" />

    </LinearLayout>

</LinearLayout>
